* v2.5.5.1
  * added --j flag to "ck install package" to update CK_HOST_CPU_NUMBER_OF_PROCESSORS env 
    and force number of processes in "make -j" if used by a given package
  * added ck.cfg key "pip_user". If yes, add --user when to pip 
    when installing CK repositories.
    Turn it on as follows:
    $ ck set kernel var.pip_user=yes
    See ticket #157

* v2.5.5
  * added result.cfg to configure CK dashboards
  * improved module:result to push results to CK dashboards
  * improved module:dashboard to work with new CK dashboards
  * improved module:wfe to work with new CK dashboards
  * added module:ck-platform to work with cKnowledge.io platform
    (moved cbench functionality from the CK incubator to the CK module
     to work with cKnowledge.io dashboards directly)
  * provided better support to work with CK modules
    as standard Python packages (see module:ck-platform as example)

* V2.5.4
  * added support to automatically add simple packages from Git:
    ck add package:my-git-repo --git={URL} --tags=my-repo --env_ext=MY_GIT_REPO
  * added module:mlperf.result to abstract official MLPerf results
  * added key "skip_global_deps" to program meta to skip global dependencies
    for a given command line (for example, only to install python deps
    for a given program)
  * improved handling of a situation when CK environment has changed
    and make it possible to continue running a workflow at user risk
    (useful for debugging)

* V2.5.3
  * added "pull" function to module:docker
  * if only 1 tag exists in Docker, select it automatically
  * updated docs

* V2.5.2
  * fixed ck run docker --command="something" on Linux

* V2.5.1
  * added --min_run to module:program to avoid pre/post processing and just run a command.
    Useful to install Python requirements for a given program CMD.
    We use it in MLPerf automation.

* V2.5.0
  * auto-install Python requirements from pulled repositories
  * added --bash to docker:module to run bash in a container